@@ -22,10 +22,12 @@ import site.coach_coach.coach_coach_server.coach.exception.DuplicateContactExcep
 import site.coach_coach.coach_coach_server.coach.exception.NotFoundCoachException;
 import site.coach_coach.coach_coach_server.coach.exception.NotFoundMatchingException;
 import site.coach_coach.coach_coach_server.coach.exception.NotFoundPageException;
+import site.coach_coach.coach_coach_server.coach.exception.NotFoundSportException;
 import site.coach_coach.coach_coach_server.coach.repository.CoachRepository;
 import site.coach_coach.coach_coach_server.common.constants.ErrorMessage;
 import site.coach_coach.coach_coach_server.common.domain.RelationFunctionEnum;
 import site.coach_coach.coach_coach_server.common.exception.AccessDeniedException;
+import site.coach_coach.coach_coach_server.like.domain.UserCoachLike;
 import site.coach_coach.coach_coach_server.like.repository.UserCoachLikeRepository;
 import site.coach_coach.coach_coach_server.matching.domain.Matching;
 import site.coach_coach.coach_coach_server.matching.repository.MatchingRepository;
@@ -85,11 +87,10 @@ public class CoachService {
 
 	@Transactional
 	public void addNewCoachingSports(Coach coach, List<CoachingSportDto> coachingSports) {
-		List<Long> sportIds = coachingSports.stream()
-			.map(CoachingSportDto::sportId)
-			.collect(Collectors.toList());
-
-		List<Sport> sports = sportRepository.findAllById(sportIds);
+		List<Sport> sports = coachingSports.stream()
+			.map(coachingSportDto -> sportRepository.findBySportName(coachingSportDto.sportName())
+				.orElseThrow(() -> new NotFoundSportException(ErrorMessage.NOT_FOUND_SPORTS)))
+			.toList();
 
 		List<CoachingSport> coachingSportsEntities = sports.stream()
 			.map(sport -> new CoachingSport(coach, sport))
@@ -208,6 +209,18 @@ public class CoachService {
 
 		return new CoachListResponse(coaches, (int)coachesPage.getTotalElements(), page);
 	}
+  
+  @Transactional
+  public void addCoachToFavorites(Long userId, Long coachId) {
+		User user = userRepository.findById(userId)
+			.orElseThrow(InvalidUserException::new);
+
+		Coach coach = coachRepository.findById(coachId)
+			.orElseThrow(() -> new NotFoundCoachException(ErrorMessage.NOT_FOUND_COACH));
+
+		if (!userCoachLikeRepository.existsByUser_UserIdAndCoach_CoachId(userId, coachId)) {
+			userCoachLikeRepository.save(new UserCoachLike(null, user, coach));
+			notificationService.createNotification(user.getUserId(), coachId, RelationFunctionEnum.like);
 
 	@Transactional
 	public void deleteCoachToFavorites(Long userId, Long coachId) {
